@startuml Diagram

enum UserState {
    ONLINE
    OFFLINE
    DND
}

enum UserNotifySettings {
    ALL
    MENTIONED
    NONE
}

Class "User" as rUser {
    - id : number <<generated>>
    - nickname: string
    - password: string <<hidden>>
    - name: string
    - surname : string
    - email: string
    - state: UserState
    - notifications: UserNotifySettings
}

class "Message" as rMessage {
    - id: number <<generated>>
    - createdBy: number <<FK>>
    - channelId: number <<FK>>
    - content: string
}

class "Channel" as rChannel {
    - id: number <<generated>>
    - name: string
    - channelAdmin: number <<FK>>
    - isPublic: boolean
}

Class "UserMembership" as rUserMembership {
    - userId: number <<FK>>
    - channelId: number <<FK>>
}

class "Ban" as rBan {
    - id: number <<generated>>
    - channelId: number <<FK>>
    - bannedById: number <<FK>>
    - bannedUserId: number <<FK>>
}

class "BannedUser" as rBannedUser {
    - id: number <<generated>>
    - bannedUserId: number <<FK>>
    - channelId: number <<FK>>
    - bannedById: number <<FK>>
}

rUserMembership o--o rUser
rUserMembership o--o rChannel
rMessage "1" o--> "1..*" rChannel
rBan "1" o--> "1..*" rChannel
rBan "1" o--> "0..*" rUser
rBannedUser "1" o--> "1..*" rChannel
rBannedUser "1" o--> "0..*" rUser : bannedUser
rChannel "1" o--> "*" rMessage
rChannel "*" o--> "*" rUser
rChannel "1" o--> "*" rBan

@enduml
